# qinghe

./: .gitignore  Cargo.toml  config.yaml  ora2my_data.yaml  ora2my_ddl.yaml  readme.md  readme.txt
misc/: glibc2.14_libc_for_centos6.tgz
misc/centos6_yum/: CentOS-Base.repo  CentOS-Epel.repo  resolv.conf
src/: args.rs  common.rs  counter.rs  main.rs
src/ora2my/: export_data.rs  export_ddl.rs  initialize_db.rs  mod.rs
