#cargo-features = ["edition2021"]


[package]
name = "qinghe"
authors = ["Zhaoping Lu <zhaopinglu77@gmail.cm>"]
description = "A tool to migrate schema and data from Oracle 11g+ to MySQL 5/8"
license = "Apache-2.0/MIT"
version = "0.9.5"
edition = "2021"

readme = "asdfaaaaa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2-oracle = { git = "https://github.com/zhaopinglu/r2d2-oracle" }
oracle = { version = "*", features = ["chrono"] }

# Date time (required)
chrono = { version = "*", features = ["serde"] }

# BigDecimal lib(optional)
bigdecimal = "*"

structopt = "*"
# logging lib(required)
log = "*"
fast_log="*"

tokio = { version = "*", features = ["full"]}

lazy_static = "*"

async-channel = "*"
futures = "*"

dashmap = "*"

async-trait = "*"

yaml-rust = "*"

serde = "*"
serde_yaml = "*"
serde_dhall = "*"
linked-hash-map = "*"

num-bigint = "0.4"
num_cpus = "*"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1
[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 1
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1